--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
         "axios": "^1.6.8",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "html-to-text": "^9.0.5",
         "joi": "^17.12.2",
         "jwt-decode": "^4.0.0",
         "lodash": "^4.17.21",
         "lucide-react": "^0.360.0",
+        "quill": "^2.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.1",
@@ -50,6 +52,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@types/html-to-text": "^9.0.4",
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
         "@types/react-slick": "^0.23.13",
