--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-switch": "^1.1.0",
         "@radix-ui/react-toast": "^1.1.5",
         "@react-oauth/google": "^0.12.1",
+        "@reduxjs/toolkit": "^2.2.7",
         "@tanstack/react-query": "^5.28.4",
         "@tanstack/react-table": "^8.15.3",
         "@types/lodash": "^4.17.0",
@@ -41,6 +42,7 @@
         "react-hook-form": "^7.51.1",
         "react-icons": "^5.2.1",
         "react-quill": "^2.0.0",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.22.3",
         "react-slick": "^0.30.2",
         "slick-carousel": "^1.8.1",
